# codex-naive

./: .dockerignore  .env.example  .gitignore  README.md  debugos_investigation_engine_a4269232.plan.md  docker-compose.yml  pyproject.toml
Debug_module/: README.md
app/: __init__.py  (+4 more)
code-tracker/: .gitignore  README.md  pyproject.toml  requirements.txt
code-tracker/.traceflow-fixes/87ca93b09c75/source/app/: database.py  main.py
code-tracker/.traceflow-fixes/87ca93b09c75/source/app/api/: dependencies.py  error_handlers.py  router.py
code-tracker/.traceflow-fixes/87ca93b09c75/source/app/core/: config.py
code-tracker/.traceflow-fixes/87ca93b09c75/source/app/data/: crm_tickets.db
code-tracker/.traceflow-fixes/87ca93b09c75/source/app/db/: seed.py
code-tracker/tests/: test_debug_fix.py  test_github_connect.py  test_tracing.py
code-tracker/traceflow/: __init__.py  app.py  runtime.py
code-tracker/traceflow/analysis/: __init__.py  api.py  service.py
code-tracker/traceflow/debug/: __init__.py  api.py  service.py
code-tracker/traceflow/demo/: __init__.py  db.py  models.py
code-tracker/traceflow/demo/api/: __init__.py  tickets.py  traces.py
code-tracker/traceflow/demo/repositories/: __init__.py  tickets.py
code-tracker/traceflow/demo/services/: __init__.py  tickets.py
code-tracker/traceflow/projects/: __init__.py  api.py  manager.py
code-tracker/traceflow/static/: app.js  index.html  monitor.html  monitor.js  styles.css
code-tracker/traceflow/tracing/: __init__.py  context.py  decorators.py  middleware.py  models.py  profiler.py  recorder.py
(+180 files in other folders)
