[project]
name = "traceflow-code-tracker"
version = "0.1.0"
description = "FastAPI request and function-flow tracker with a visual debugging UI."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "openai>=1.35",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
